--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>kandkschooltransport</title>
-	<atom:link href="https://cliffordestrella.github.io/kandk/feed/" rel="self" type="application/rss+xml" />
-	<link>http://cliffordestrella.github.io/kandk/</link>
+	<atom:link href="https://cliffordestrella.github.io/kandk//feed/" rel="self" type="application/rss+xml" />
+	<link>http://cliffordestrella.github.io/kandk//</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 27 Oct 2020 05:11:55 +0000</lastBuildDate>
 	<language>en-US</language>
@@ -21,20 +21,20 @@
 	<generator>https://wordpress.org/?v=5.5.1</generator>
 	<item>
 		<title>Hello world!</title>
-		<link>https://cliffordestrella.github.io/kandk/2020/10/27/hello-world/</link>
-					<comments>https://cliffordestrella.github.io/kandk/2020/10/27/hello-world/#comments</comments>
+		<link>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/</link>
+					<comments>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/#comments</comments>
 		
 		<dc:creator><![CDATA[kandk]]></dc:creator>
 		<pubDate>Tue, 27 Oct 2020 05:11:55 +0000</pubDate>
 				<category><![CDATA[Uncategorized]]></category>
-		<guid isPermaLink="false">https://cliffordestrella.github.io/kandk/?p=1</guid>
+		<guid isPermaLink="false">https://cliffordestrella.github.io/kandk//?p=1</guid>
 
 					<description><![CDATA[Welcome to WordPress. This is your first post. Edit or delete it, then start writing!]]></description>
 										<content:encoded><![CDATA[
 <p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
 ]]></content:encoded>
 					
-					<wfw:commentRss>https://cliffordestrella.github.io/kandk/2020/10/27/hello-world/feed/</wfw:commentRss>
+					<wfw:commentRss>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/feed/</wfw:commentRss>
 			<slash:comments>1</slash:comments>
 		
 		
