--- a/sample-page/feed/index.html
+++ b/sample-page/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Sample Page	</title>
-	<atom:link href="https://cliffordestrella.github.io/kandk/sample-page/feed/" rel="self" type="application/rss+xml" />
-	<link>http://cliffordestrella.github.io/kandk/</link>
+	<atom:link href="https://cliffordestrella.github.io/kandk//sample-page/feed/" rel="self" type="application/rss+xml" />
+	<link>http://cliffordestrella.github.io/kandk//</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 27 Oct 2020 05:11:55 +0000</lastBuildDate>
 	<sy:updatePeriod>
