--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for kandkschooltransport	</title>
-	<atom:link href="https://cliffordestrella.github.io/kandk/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://cliffordestrella.github.io/kandk/</link>
+	<atom:link href="https://cliffordestrella.github.io/kandk//comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://cliffordestrella.github.io/kandk//</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 27 Oct 2020 05:11:55 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>https://cliffordestrella.github.io/kandk/2020/10/27/hello-world/#comment-1</link>
+		<link>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Tue, 27 Oct 2020 05:11:55 +0000</pubDate>
-		<guid isPermaLink="false">https://cliffordestrella.github.io/kandk/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://cliffordestrella.github.io/kandk//?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
