--- a/feed/index.html
+++ b/feed/index.html
@@ -21,8 +21,8 @@
 	<generator>https://wordpress.org/?v=5.5.1</generator>
 	<item>
 		<title>Hello world!</title>
-		<link>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/</link>
-					<comments>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/#comments</comments>
+		<link>https://cliffordestrella.github.io/kandk//hello-world/</link>
+					<comments>https://cliffordestrella.github.io/kandk//hello-world/#comments</comments>
 		
 		<dc:creator><![CDATA[kandk]]></dc:creator>
 		<pubDate>Tue, 27 Oct 2020 05:11:55 +0000</pubDate>
@@ -34,7 +34,7 @@
 <p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
 ]]></content:encoded>
 					
-					<wfw:commentRss>https://cliffordestrella.github.io/kandk//2020/10/27/hello-world/feed/</wfw:commentRss>
+					<wfw:commentRss>https://cliffordestrella.github.io/kandk//hello-world/feed/</wfw:commentRss>
 			<slash:comments>1</slash:comments>
 		
 		
