--- a/hello-world/feed/index.html
+++ b/hello-world/feed/index.html
@@ -7,9 +7,9 @@
 	>
 <channel>
 	<title>
-	Comments for kandkschooltransport	</title>
-	<atom:link href="https://cliffordestrella.github.io/kandk//comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://cliffordestrella.github.io/kandk//</link>
+	Comments on: Hello world!	</title>
+	<atom:link href="https://cliffordestrella.github.io/kandk//hello-world/feed/" rel="self" type="application/rss+xml" />
+	<link>https://cliffordestrella.github.io/kandk//hello-world/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Tue, 27 Oct 2020 05:11:55 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -19,7 +19,7 @@
 	<generator>https://wordpress.org/?v=5.5.1</generator>
 	<item>
 		<title>
-		Comment on Hello world! by A WordPress Commenter		</title>
+		By: A WordPress Commenter		</title>
 		<link>https://cliffordestrella.github.io/kandk//hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
